--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_projectId=zap-shift-5fea2
 VITE_storageBucket=zap-shift-5fea2.firebasestorage.app
 VITE_messagingSenderId=1033632993908
 VITE_appId=1:1033632993908:web:992166cff009fa81743721
+VITE_imagePost_key=01637082aca15f028f1f06c19ad702af
